Continued the new project idea. Added a card box design containing a dropdown with a selection of genres, radiobuttons to select the amount of songs for the playlist, and a text-box for generating the name for the playlist. It successfully creates a playlist that can be verified by the success message after clicking generate, as well as checking the spotify app and entering to your account. Bug fixes are needed though, and a way to not let the user generate repeatedly without some sort of cooldown or something.